# Aegix

./: .gitignore  README.md  pyproject.toml
aegix/: cli.py  models.py  policy.py  router.py
aegix/policy/: default.yaml
aegix/runtime/: docker_backend.py
aegix_agent/: openai_runner.py
aegix_core/: cli.py  contracts.py  errors.py
aegix_core/io/: artifacts.py
aegix_core/logging/: audit.py
examples/python/tutorial/agent_team/: adk_tutorial.ipynb
